# MUSE

./: .gitignore  Cargo.toml  README.md  grammar.md
Warm Gain.clap/Contents/: Info.plist
Warm Gain.clap/Contents/MacOS/: Warm Gain
Warm Gain.vst3/Contents/: Info.plist
Warm Gain.vst3/Contents/MacOS/: Warm Gain
drum-machine/: Cargo.toml
drum-machine/src/: lib.rs
examples/: chorus_effect.muse  distortion.muse  drum_machine.muse  dynamics.muse  echo.muse  filter.muse  gain.muse  gate.muse  gui_compressor.muse  gui_gain.muse  gui_layout.muse  gui_spectrum.muse  gui_styled.muse  import_as_demo.muse  import_demo.muse  looping_sampler.muse  modulated_filter.muse  mpe_synth.muse  multiband.muse  oversampled_distortion.muse  parametric_eq.muse  phase_osc.muse  phaser.muse  poly_synth.muse  preset_gain.muse  pulse_synth.muse  reverb_effect.muse  ring_mod.muse  shimmer_verb.muse  sidechain_compressor.muse  step_tremolo.muse  stereo_width.muse  synth.muse  tempo_delay.muse  tremolo.muse  unison_synth.muse  user_functions.muse  wavetable_synth.muse
examples/lib/: saturation.muse
looping-sampler/: Cargo.toml
looping-sampler/src/: lib.rs
sidechain-comp/: Cargo.toml
sidechain-comp/src/: lib.rs
skill/: SKILL.md
skill/references/: cli-commands.md  dsp-primitives.md  error-codes.md  language-reference.md  plugin-recipes.md  test-syntax.md
skill/workflows/: create-gui-plugin.md  create-plugin.md  debug-errors.md  extend-plugin.md
src/: ast.rs  diagnostic.rs  lib.rs  main.rs  parser.rs  resolve.rs  span.rs  token.rs  types.rs
src/codegen/: cargo.rs  dsp.rs  editor.rs  gui.rs  midi.rs  mod.rs  params.rs  plugin.rs  presets.rs  preview.rs  process.rs  test.rs
src/dsp/: mod.rs  primitives.rs
src/preview/: audio.rs  host_plugin.rs  input.rs  midi.rs  mod.rs  reload.rs  watcher.rs
tests/: broken_test.muse  codegen_tests.rs  diagnostic_tests.rs  dsp_tests.rs  generate_samples.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs  resolve_tests.rs
tests/fixtures/: poly_synth_voice_decl.muse  soft_clip_dc_block.muse
warm-gain/: Cargo.toml
warm-gain/assets/: editor.html
warm-gain/src/: lib.rs
wavetable-synth/: Cargo.toml
wavetable-synth/src/: lib.rs
