[package]
name = "muse-lang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "muse"
path = "src/main.rs"

[dependencies]
logos = "0.16"
chumsky = "=1.0.0-alpha.8"
ariadne = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject", "NSURL", "NSRunLoop"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSView", "NSResponder", "NSRunningApplication"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKUserContentController"] }
