[package]
name = "warm-gain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSResponder"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKUserContentController", "WKScriptMessageHandler", "WKScriptMessage"] }
block2 = "0.6"
serde_json = "1"
